# MOCO-jib

./: .gitignore  MILESTONES.md  README.md  STABILITY_PASS_CHECKLIST.txt  Wills_Email
ESP32-S3/: CMakeLists.txt  DisplayApp.cpp  DisplayApp.h  DisplayBackend.cpp  DisplayBackend.h  ESP32-S3.ino  RIG_Display.ino  WaveshareBoardConfig.h  sdkconfig  sdkconfig.defaults
ESP32-S3/main/: CMakeLists.txt  lv_font_montserrat_120.c  lv_font_montserrat_150.c  lv_font_montserrat_40_limited.c  main.c
MEGA__master/: MEGA__master.ino
NANO_slave_1_SWING/: NANO_slave_1_SWING.ino
NANO_slave_2_PAN/: NANO_slave_2_PAN.ino
NANO_slave_3_LIFT/: NANO_slave_3_LIFT.ino
NANO_slave_4_TILT/: NANO_slave_4_TILT.ino
NANO_slave_5_FOCUS/: NANO_slave_5_FOCUS.ino
assets/: mega.HEIC  ps2.HEIC
